--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
     "vite-tsconfig-paths": "^4.3.1"
   },
   "overrides": {
-    "rollup": "npm:@rollup/wasm-node"
+    "rollup": "npm:@rollup/wasm-node",
+    "glob": "^10.5.0"
   },
   "engines": {
     "node": ">=20.0.0"
