--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "predev": "drizzle-kit push",
     "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
     "start": "remix-serve build/server/index.js",
-    "prestart": "drizzle-kit push",
+    "prestart": "drizzle-kit migrate",
     "typecheck": "tsc",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
@@ -41,7 +41,6 @@
     "puppeteer": "^24.23.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sort-by": "^1.2.0",
     "three": "^0.179.1",
     "three-stdlib": "^2.36.0",
     "tiny-invariant": "^1.3.1",
@@ -71,7 +70,8 @@
     "vite-tsconfig-paths": "^4.3.1"
   },
   "overrides": {
-    "rollup": "npm:@rollup/wasm-node"
+    "rollup": "npm:@rollup/wasm-node",
+    "glob": "^10.5.0"
   },
   "engines": {
     "node": ">=20.0.0"
