--- a/package.json
+++ b/package.json
@@ -80,7 +80,8 @@
     "rollup": "npm:@rollup/wasm-node",
     "glob": "^10.5.0",
     "@remix-run/router": "^1.23.2",
-    "qs": "^6.14.1"
+    "qs": "^6.14.1",
+    "fast-xml-parser": "^5.3.4"
   },
   "engines": {
     "node": ">=20.0.0"
